--- a/submission/C_Result_Fig4_3.ipynb
+++ b/submission/C_Result_Fig4_3.ipynb
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1226,8 +1226,8 @@
        "      <td>c++</td>\n",
        "      <td>.a</td>\n",
        "      <td>0.25000000000000000000</td>\n",
-       "      <td>920.0</td>\n",
-       "      <td>0.000272</td>\n",
+       "      <td>919.99999999999999999743</td>\n",
+       "      <td>0.0002717391304347826086964112713</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1541</th>\n",
@@ -1235,8 +1235,8 @@
        "      <td>c++</td>\n",
        "      <td>.net</td>\n",
        "      <td>0.33333333333333333333</td>\n",
-       "      <td>920.0</td>\n",
-       "      <td>0.000362</td>\n",
+       "      <td>919.99999999999999999743</td>\n",
+       "      <td>0.0003623188405797101449249251733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1542</th>\n",
@@ -1244,8 +1244,8 @@
        "      <td>c++</td>\n",
        "      <td>.so</td>\n",
        "      <td>0.20000000000000000000</td>\n",
-       "      <td>920.0</td>\n",
-       "      <td>0.000217</td>\n",
+       "      <td>919.99999999999999999743</td>\n",
+       "      <td>0.0002173913043478260869571290170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1543</th>\n",
@@ -1253,8 +1253,8 @@
        "      <td>c++</td>\n",
        "      <td>3d</td>\n",
        "      <td>0.45000000000000000000</td>\n",
-       "      <td>920.0</td>\n",
-       "      <td>0.000489</td>\n",
+       "      <td>919.99999999999999999743</td>\n",
+       "      <td>0.0004891304347826086956535402883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1544</th>\n",
@@ -1262,8 +1262,8 @@
        "      <td>c++</td>\n",
        "      <td>a-star</td>\n",
        "      <td>0.50000000000000000000</td>\n",
-       "      <td>920.0</td>\n",
-       "      <td>0.000543</td>\n",
+       "      <td>919.99999999999999999743</td>\n",
+       "      <td>0.0005434782608695652173928225425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1280,8 +1280,8 @@
        "      <td>c++</td>\n",
        "      <td>windows-subsystem-for-linux</td>\n",
        "      <td>0.45000000000000000000</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>0.001456</td>\n",
+       "      <td>308.99999999999999999914</td>\n",
+       "      <td>0.001456310679611650485440946366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>955902</th>\n",
@@ -1289,8 +1289,8 @@
        "      <td>c++</td>\n",
        "      <td>wine</td>\n",
        "      <td>0.20000000000000000000</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>0.000647</td>\n",
+       "      <td>308.99999999999999999914</td>\n",
+       "      <td>0.0006472491909385113268626428295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>955903</th>\n",
@@ -1298,8 +1298,8 @@
        "      <td>c++</td>\n",
        "      <td>winui-3</td>\n",
        "      <td>0.50000000000000000000</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>0.001618</td>\n",
+       "      <td>308.99999999999999999914</td>\n",
+       "      <td>0.001618122977346278317156607074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>955904</th>\n",
@@ -1307,8 +1307,8 @@
        "      <td>c++</td>\n",
        "      <td>xcode</td>\n",
        "      <td>0.58333333333333333333</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>0.001888</td>\n",
+       "      <td>308.99999999999999999914</td>\n",
+       "      <td>0.001887810140237324703338587433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>955905</th>\n",
@@ -1316,8 +1316,8 @@
        "      <td>c++</td>\n",
        "      <td>xml</td>\n",
        "      <td>0.53333333333333333333</td>\n",
-       "      <td>309.0</td>\n",
-       "      <td>0.001726</td>\n",
+       "      <td>308.99999999999999999914</td>\n",
+       "      <td>0.001725997842502696871622926725</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1338,23 +1338,36 @@
        "955904      52.0          c++                        xcode   \n",
        "955905      52.0          c++                          xml   \n",
        "\n",
-       "                           cnt  tot_cnt  proportion  \n",
-       "1540    0.25000000000000000000    920.0    0.000272  \n",
-       "1541    0.33333333333333333333    920.0    0.000362  \n",
-       "1542    0.20000000000000000000    920.0    0.000217  \n",
-       "1543    0.45000000000000000000    920.0    0.000489  \n",
-       "1544    0.50000000000000000000    920.0    0.000543  \n",
-       "...                        ...      ...         ...  \n",
-       "955901  0.45000000000000000000    309.0    0.001456  \n",
-       "955902  0.20000000000000000000    309.0    0.000647  \n",
-       "955903  0.50000000000000000000    309.0    0.001618  \n",
-       "955904  0.58333333333333333333    309.0    0.001888  \n",
-       "955905  0.53333333333333333333    309.0    0.001726  \n",
+       "                           cnt                   tot_cnt  \\\n",
+       "1540    0.25000000000000000000  919.99999999999999999743   \n",
+       "1541    0.33333333333333333333  919.99999999999999999743   \n",
+       "1542    0.20000000000000000000  919.99999999999999999743   \n",
+       "1543    0.45000000000000000000  919.99999999999999999743   \n",
+       "1544    0.50000000000000000000  919.99999999999999999743   \n",
+       "...                        ...                       ...   \n",
+       "955901  0.45000000000000000000  308.99999999999999999914   \n",
+       "955902  0.20000000000000000000  308.99999999999999999914   \n",
+       "955903  0.50000000000000000000  308.99999999999999999914   \n",
+       "955904  0.58333333333333333333  308.99999999999999999914   \n",
+       "955905  0.53333333333333333333  308.99999999999999999914   \n",
+       "\n",
+       "                               proportion  \n",
+       "1540    0.0002717391304347826086964112713  \n",
+       "1541    0.0003623188405797101449249251733  \n",
+       "1542    0.0002173913043478260869571290170  \n",
+       "1543    0.0004891304347826086956535402883  \n",
+       "1544    0.0005434782608695652173928225425  \n",
+       "...                                   ...  \n",
+       "955901   0.001456310679611650485440946366  \n",
+       "955902  0.0006472491909385113268626428295  \n",
+       "955903   0.001618122977346278317156607074  \n",
+       "955904   0.001887810140237324703338587433  \n",
+       "955905   0.001725997842502696871622926725  \n",
        "\n",
        "[66151 rows x 6 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,6 +1393,135 @@
    "outputs": [],
    "source": [
     "df_entropy = df_proportion.groupby([by, 'matched_tags'])['proportion'].apply(lambda x : calculate_entropy(x)).to_frame(name='entropy').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rel_week</th>\n",
+       "      <th>matched_tags</th>\n",
+       "      <th>entropy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-52.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.414516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>-51.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.461975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>-50.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.449896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>-49.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.456481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>-48.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.447847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1809</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.916602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1827</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.908494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1845</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.956713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1863</th>\n",
+       "      <td>51.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.833503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1881</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>python</td>\n",
+       "      <td>4.616306</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>105 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rel_week matched_tags   entropy\n",
+       "9        -52.0       python  4.414516\n",
+       "27       -51.0       python  4.461975\n",
+       "45       -50.0       python  4.449896\n",
+       "63       -49.0       python  4.456481\n",
+       "81       -48.0       python  4.447847\n",
+       "...        ...          ...       ...\n",
+       "1809      48.0       python  4.916602\n",
+       "1827      49.0       python  4.908494\n",
+       "1845      50.0       python  4.956713\n",
+       "1863      51.0       python  4.833503\n",
+       "1881      52.0       python  4.616306\n",
+       "\n",
+       "[105 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_entropy[df_entropy['matched_tags']=='python']"
    ]
   },
   {
@@ -2259,7 +2401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lk/t243gzpx379bzd9mvx8dcsmm0000gp/T/ipykernel_82186/3560257272.py:67: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "/var/folders/lk/t243gzpx379bzd9mvx8dcsmm0000gp/T/ipykernel_96150/3560257272.py:67: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
       "  plt.subplots_adjust(wspace=0.03)\n"
      ]
     },
